--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 
     <link rel="stylesheet" type="text/css" href="assets/built/screen.css">
 
-    <meta name="description" content="Python | Machine Learning | Digital Analytics">
+    <meta name="description" content="Data Science | Data Engineering | Machine Learning | Deep Learning">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="canonical" href="https://volderette.de/">
+    <link rel="canonical" href="https://rohanvartak1996.github.io">
     <meta name="referrer" content="no-referrer-when-downgrade">
     
-    <meta property="og:site_name" content="All things Data Science">
+    <meta property="og:site_name" content="Rohan Vartak">
     <meta property="og:type" content="website">
     <meta property="og:title" content="All things Data Science">
     <meta property="og:description" content="Python | Machine Learning | Digital Analytics">
-    <meta property="og:url" content="https://volderette.de/">
+    <meta property="og:url" content="https://rohanvartak1996.github.io">
     <meta property="og:image" content="assets/images/background.jpg">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="All things Data Science">
