--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 
 
-<iframe src="https://coda.io/embed/rP4RBA854r/_suuYQ" width=1500 height=5000 style="max-width: 100%;" allow="fullscreen"></iframe>
+<iframe src="https://coda.io/embed/rP4RBA854r/_suuYQ?hideSections=true" width=1500 height=5000 style="max-width: 100%;" allow="fullscreen"></iframe>
 
 
 
